--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-notification-center-component": "^1.0.9",
+    "react-push-notification": "^1.3.0",
     "react-scripts": "4.0.3",
     "react-scrollable-list": "^1.3.0",
     "styled-components": "^5.2.1",
