--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "react-push-notification": "^1.3.0",
     "react-scripts": "4.0.3",
     "react-scrollable-list": "^1.3.0",
+    "serve": "^11.3.2",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE=./.cert/cert.pem SSL_KEY_FILE=./.cert/key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
