--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "global": "^4.4.0",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-notification-center-component": "^1.0.9",
     "react-push-notification": "^1.3.0",
-    "react-scripts": "4.0.3",
     "react-scrollable-list": "^1.3.0",
     "serve": "^11.3.2",
     "styled-components": "^5.2.1",
@@ -43,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^4.0.0",
+    "webpack": "^4.44.2"
   }
 }
